--- a/fetool/package.json
+++ b/fetool/package.json
@@ -14,10 +14,12 @@
     "@mui/material": "^5.10.12",
     "axios": "^1.1.3",
     "babel": "^6.23.0",
+    "dotenv": "^16.0.3",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.2",
     "next": "13.0.2",
     "nookies": "^2.5.2",
+    "path": "^0.12.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.1"
