--- a/fetool/package.json
+++ b/fetool/package.json
@@ -22,6 +22,7 @@
     "path": "^0.12.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-toastify": "^9.1.1"
+    "react-toastify": "^9.1.1",
+    "swr": "^1.3.0"
   }
 }
