--- a/fetool/package.json
+++ b/fetool/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.13",
+    "@mui/styles": "^5.10.14",
     "axios": "^1.1.3",
     "babel": "^6.23.0",
     "eslint": "8.26.0",
