--- a/fetool/package.json
+++ b/fetool/package.json
@@ -14,12 +14,14 @@
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.13",
     "@mui/styles": "^5.10.14",
+    "@mui/x-data-grid": "^5.17.16",
     "axios": "^1.1.3",
     "babel": "^6.23.0",
     "date-fns": "^2.29.3",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.2",
     "next": "13.0.2",
+    "next-auth": "^4.18.7",
     "nookies": "^2.5.2",
     "path": "^0.12.7",
     "react": "18.2.0",
