--- a/fetool/package.json
+++ b/fetool/package.json
@@ -19,11 +19,11 @@
     "date-fns": "^2.29.3",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.2",
-    "next": "13.0.2",
+    "next": "^13.0.2",
     "nookies": "^2.5.2",
     "path": "^0.12.7",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-toastify": "^9.1.1",
     "swr": "^1.3.0"
