--- a/betool/package.json
+++ b/betool/package.json
@@ -13,6 +13,7 @@
     "@strapi/plugin-documentation": "^4.5.4",
     "@strapi/plugin-i18n": "4.4.5",
     "@strapi/plugin-users-permissions": "4.4.5",
+    "@strapi/provider-email-nodemailer": "^4.5.5",
     "@strapi/strapi": "4.4.5",
     "better-sqlite3": "7.4.6",
     "strapi-plugin-email-designer": "^2.1.1"
